# prompteol

./: .gitignore  README.md  accelerate.json  pyproject.toml
src/: full.py  lora.py  qlora.py
