[project]
name = "prompteol"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "hppRC", email = "hpp.ricecake@gmail.com" }]
dependencies = [
    "torch==2.1.0+cu118",
    "transformers @ git+https://github.com/huggingface/transformers",
    "tokenizers>=0.14.1",
    "accelerate>=0.23.0",
    "fsspec[http]==2023.6.0",
    "typed-argument-parser>=1.8.1",
    "einops>=0.7.0",
    "mwparserfromhell>=0.6.5",
    "datasets>=2.14.6",
    "peft>=0.5.0",
    "pip>=23.3",
    "deepspeed>=0.11.1",
    "bitsandbytes>=0.41.1",
    "dill==0.3.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "sentencepiece>=0.1.99",
    "setuptools>=68.2.2",
    "mteb>=1.1.1",
    "sentence-transformers>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []


[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "outputs"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
